# tlrmvm

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  README.md  loaddata.c  savedataonmatlab.m  setup.py  tlrmvm.c  util.c  util.h
bash/: config_ibex.sh  ibexcpu.sh  ibexgpu.sh  ibexinteloneapi.sh  jupyterCSL.sh  jupyterv100.sh  qaysarcpu.sh  qaysargpu.sh  run_intel_dpcpp.sh
bash/amd/: command.py  loadbalancing.sh  romeseismic.sh
bash/neserA64FX/: submittest.sh
bash/nvidiagtc21/: densemvm.sh  varid.sh  varnb.sh  varstream.sh
bash/old/: config_amd.sh  config_intel.sh  config_stork.sh  intelgemv.sh  run_amd_tlrmvm.sh  run_cuda_tlrmvm.sh  run_general_gemv.sh  run_intel_tlrmvm.sh  run_nec_tlrmvm.sh  runmck.sh  sbatch_amd.sh  storkcmd.sh
bash/shaheen/: GTest_matrix.sh
benchmark/: Makefile
benchmark/cpp/: bench_mvm_fp32.cpp  bench_mvm_singlecomplex.cpp
benchmark/cuda/: bench_mvm_cuda_fp32.cpp  bench_mvm_cuda_singlecomplex.cpp
benchmark/hip/: Bench_hip_constrank.cpp  Bench_hip_tlrmvm.sh
cmake/: Util.cmake  cudatlrmvm.cmake  hiptlrmvm.cmake  tlrmvm.cmake
devbenchmark/: SeismicCUDAGraphPerf.cpp  complex_mvm_benchmark.cu  single_mvm_benchmark.cu
devtest/: AstronomyFujitsuDriver.cpp  AstronomyGBenchCUDA1GPU.cpp  AstronomyGTestCPUMPI.cpp.back  AstronomyGTestCPUMPIconstrank.cpp  AstronomyGTestCUDA1GPU.cpp  AstronomyGTestCUDA1GPUConstRank.cpp.back  AstronomyGTestCUDA1GPUSplitCUDAGraph.cpp  AstronomyGTestCUDA1GPUSplitCUDAGraphV2.cpp  AstronomyGTestCUDA1GPUceil32.cpp  AstronomyGTestMergeyfinal.cpp  AstronomyGTestPCMatrix.cpp  AstronomyPhase1.cpp  AstronomyPhase2.cpp  AstronomyUtil.cpp  AstronomyUtil.h  CUDAGTest1GPU.cpp  CommonGTestMatrix.cpp  CommonGTestTileMatrix.cpp  CommonGTestTlrmvmCPU.cpp  FP16TCtest.cu  LoadRankTest.c  MVMGTest.cpp  SeismicGBenchDense.cpp  SeismicGBenchDenseOld.cpp  SeismicGBenchIPDPSDense.cpp  SeismicGBenchPadding.cpp  SeismicGTestCPUMPI.cpp  SeismicGTestHalfPrecisionTensorCore.cpp  SeismicGTestPCMatrix.cpp  SeismicTLRMVM.c  amd_dense_mvm.c  amd_tile_mpi_mvm_v1.c  amd_tile_mpi_mvm_v2.c  amd_tile_openmp_mvm_v1.c  amd_tile_openmp_mvm_v2.c  complex_mvm.c  complex_tlrmvm.c  ctlrmvm.c  dgemv.c  dgemv_amd_multithread.c  (+4 more)
devtest/cuda/: CMakeLists.txt  SeismicCUDAGraph.cpp
devtest/cuda/cublasbenchmark/: sgemmexTest.cpp
devtest/oneapi/: Astronomy.cpp  CMakeLists.txt  SeismicRedatuming.cpp  cblas_sgemv_batch_example.c  cblas_sgemv_batch_example.cpp  gemv_batch_usm.cpp  ixpug.cpp
doxygen/: CMakeLists.txt  Doxyfile.in
install/: install-x86-cuda.sh  install-x86.sh  spack-install-x86-cuda.sh  spack-install-x86.sh
oldcode/: cublastlrmv.cu  dgemv.c
python/: CMakeLists.txt  __init__.py  tlrmat.py  tlrmvmtools.py  wrapper.py
python/src/: wrapper.cpp
pytlrmvm/: CMakeLists.txt  Densemat.py  __init__.py  _wrapper.py  convertmat2npy.py  generateseismicinput.py  tlrmat.py  tlrmvmtools.py
pytlrmvm/src/: BatchTlrmvm.cpp  CommonWrapper.cpp  Tlrmvm.cpp  Wrapper.cpp  wrapperdef.h
src/common/: AppUtil.cpp  AppUtil.h  AppUtil.hpp  CMakeLists.txt  Common.h  Common.hpp
src/common/cpu/: BlasInterface.cpp  BlasInterface.h  BlasInterface.hpp  CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  MemoryManagement.cpp  MemoryManagement.h  Util.cpp  Util.h  Util.hpp
src/common/cpu/vendorblas/: blisinterface.cpp  blisinterface.h  mklinterface.cpp  mklinterface.h  openblasinterface.cpp  openblasinterface.h
src/common/cuda/: CMakeLists.txt  Util.cpp  Util.h  Util.hpp  cublasInterface.cpp  cublasInterface.h  cublasInterface.hpp
src/common/hip/: Util.cpp  Util.hpp  hipblasInterface.cpp  hipblasInterface.hpp
src/tlrmvm/: Tlrmvm.h  Tlrmvm.hpp
src/tlrmvm/cpu/: CMakeLists.txt  PCMatrix.cpp  PCMatrix.h  PCMatrix.hpp  TlrmvmCPU.cpp  TlrmvmCPU.h  TlrmvmCPU.hpp  TlrmvmDPCPP.cpp  TlrmvmDPCPP.h  TlrmvmDPCPP.hpp
src/tlrmvm/cuda/: BatchTlrmvmcuda.cpp  BatchTlrmvmcuda.hpp  BatchTlrmvmcudaFP16.cpp  BatchTlrmvmcudaFP16.hpp  BatchTlrmvmcudaINT8.cpp  BatchTlrmvmcudaINT8.hpp  TlrmvmGPU.cpp  TlrmvmGPU.h  TlrmvmKernel.cu  TlrmvmKernel.cuh  TlrmvmMPfp16.cpp  TlrmvmMPfp16.hpp  TlrmvmMPint8.cpp  TlrmvmMPint8.hpp  TlrmvmMixedPrec.cpp  TlrmvmMixedPrec.h  Tlrmvmcuda.cpp  Tlrmvmcuda.hpp  TlrmvmcudaConstRank.cpp  TlrmvmcudaConstRank.hpp  cudakernel.cu  cudakernel.cuh  tlrmvmcudautil.cpp  tlrmvmcudautil.hpp
src/tlrmvm/hip/: BatchTlrmvmhip.cpp  BatchTlrmvmhip.hpp  Tlrmvmhip.cpp  Tlrmvmhip.hpp  TlrmvmhipConstRank.cpp  TlrmvmhipConstRank.hpp  hipkernel.cpp  hipkernel.cuh  tlrmvmhiputil.cpp  tlrmvmhiputil.hpp
test/: CMakeLists.txt
test/cpp/: Test_cpu_tlrmvm.cpp  ex1basic_complexfloat.cpp  ex1basic_float.cpp  ex2mpitlrmvm_complexfloat.cpp  ex2mpitlrmvm_float.cpp  ex3_gendata.cpp  mkl_example.h  runexp1.sh  runexp2A64FX.sh  runexp2AMD.sh  runexp2AMD_synthetic.sh  runexp2ICX.sh  runexp2NEC.sh  runexp3_gendata.sh
test/cuda/: Test_A100TimeDecomposition.cpp  Test_BatchCall_Tlrmvm.cpp  Test_MultiGPUBatchCall_Tlrmvm.cpp  astronomy_cudatest.sh  cudatest.sh  ex3basic.cu  ex4cudagraph_csingle.cu  ex4cudagraph_float.cu  ex5dense.cu  seismology_cudatest.sh  seismology_mixedprec_cudatest.sh
test/hip/: Test_hip_constrank.cpp  Test_hip_hipblas.cpp  Test_hip_tlrmvm.cpp  Test_hip_tlrmvm_singlecall.cpp
test/python/: generateinput.py  geninput_astronomy.sh  geninput_seismology.sh  mode4generateinput.py  pyexec.sh  seismicexample.py  tlrmvmexample.py
